--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,41 +1,97 @@
 /**
+ * Cloudflare Mini WAF - Wrangler Configuration
+ * 
  * For more details on how to configure Wrangler, refer to:
  * https://developers.cloudflare.com/workers/wrangler/configuration/
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "cloudflare-mini-waf",
-	"main": "src/index.ts",
+	"main": "src/index.js",
 	"compatibility_date": "2025-09-27",
 	"observability": {
 		"enabled": true
 	}
+
 	/**
-	 * Smart Placement
-	 * https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
+	 * ============================================================================
+	 * OPTIONAL: Rate Limiting with KV
+	 * ============================================================================
+	 * 
+	 * To enable full rate limiting functionality, create a KV namespace and add it here:
+	 * 
+	 * 1. Create the namespace:
+	 *    npx wrangler kv:namespace create RATE_LIMIT
+	 * 
+	 * 2. Uncomment the kv_namespaces section below and add your namespace ID:
 	 */
-	// "placement": {  "mode": "smart" }
+	// "kv_namespaces": [
+	//   {
+	//     "binding": "RATE_LIMIT",
+	//     "id": "your-kv-namespace-id-here"
+	//   }
+	// ]
+
 	/**
-	 * Bindings
-	 * Bindings allow your Worker to interact with resources on the Cloudflare Developer Platform, including
-	 * databases, object storage, AI inference, real-time communication and more.
-	 * https://developers.cloudflare.com/workers/runtime-apis/bindings/
+	 * ============================================================================
+	 * OPTIONAL: Forward to Origin Worker
+	 * ============================================================================
+	 * 
+	 * If you want to forward requests to another Worker after WAF checks,
+	 * use Service Bindings:
 	 */
+	// "services": [
+	//   {
+	//     "binding": "ORIGIN_WORKER",
+	//     "service": "your-origin-worker-name"
+	//   }
+	// ]
+
 	/**
-	 * Environment Variables
-	 * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
-	 * Note: Use secrets to store sensitive data.
-	 * https://developers.cloudflare.com/workers/configuration/secrets/
+	 * ============================================================================
+	 * OPTIONAL: Dynamic Configuration with KV
+	 * ============================================================================
+	 * 
+	 * Store WAF configuration in KV for updates without redeployment:
 	 */
-	// "vars": {  "MY_VARIABLE": "production_value" }
+	// "kv_namespaces": [
+	//   {
+	//     "binding": "CONFIG_KV",
+	//     "id": "your-config-kv-namespace-id"
+	//   }
+	// ]
+
 	/**
-	 * Static Assets
-	 * https://developers.cloudflare.com/workers/static-assets/binding/
+	 * ============================================================================
+	 * OPTIONAL: Routes and Custom Domains
+	 * ============================================================================
+	 * 
+	 * Deploy to a custom domain or route pattern:
 	 */
-	// "assets": {  "directory": "./public/",  "binding": "ASSETS" }
+	// "routes": [
+	//   {
+	//     "pattern": "api.example.com/*",
+	//     "zone_name": "example.com"
+	//   }
+	// ]
+
 	/**
-	 * Service Bindings (communicate between multiple Workers)
-	 * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
+	 * ============================================================================
+	 * OPTIONAL: Environment-Specific Configuration
+	 * ============================================================================
+	 * 
+	 * Define different settings for production and staging:
 	 */
-	// "services": [  {   "binding": "MY_SERVICE",   "service": "my-service"  } ]
+	// "env": {
+	//   "production": {
+	//     "vars": {
+	//       "ENVIRONMENT": "production"
+	//     }
+	//   },
+	//   "staging": {
+	//     "vars": {
+	//       "ENVIRONMENT": "staging"
+	//     }
+	//   }
+	// }
 }
